--- a/config.json.example
+++ b/config.json.example
@@ -1,6 +1,7 @@
 {
-        "search-queries": ["RT to win", "Retweet and win"],
-        "follow-keywords": [" follow ", " follower "],
+        "search-queries": ["man overboard", "Overboard", "overboard"], 
+	
+"follow-keywords": [" follow ", " follower "],
         "fav-keywords": [" fav ", " favorite "],
         "scan-update-time": 1800,
         "retweet-update-time": 20,
