--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-        "search-queries": ["man overboard", "Overboard", "overboard"], 
+        "search-queries": ["Overboard Alert", "overboard alert", "overboard Alert", "Overboard alert"], 
         "scan-update-time": 320,
         "retweet-update-time": 20,
         "rate-limit-update-time": 10,
