--- a/config.json
+++ b/config.json
@@ -6,8 +6,8 @@
         "min-ratelimit":10,
         "min-ratelimit-retweet":20,
         "min-ratelimit-search":40,
-	"consumer-key": "2h7j1WEMNzz1xux1ArmXpOsL0",
-	"consumer-secret": "1uNCaW9n4ViYWRDYobWhaElmN9T1JB8Z1o4tuclEbP8vM5mmiW",
-	"access-token-key": "880649348840906753-Szj2v8Eu2sbi3qZxHPeZVLULRdMFxVJ",
-	"access-token-secret": "WddBKmrEu4LBtr2SJc6hLZPlH278aJRvV1N4IstTzm7qB"
+	"consumer-key": "TWITTER_CONSUMER_KEY",
+	"consumer-secret": "TWITTER_CONSUMER_SECRET",
+	"access-token-key": "TWITTER_ACCESS_TOKEN_KEY",
+	"access-token-secret": "TWITTER_ACCESS_TOKEN_SECRET"
 }
